unpackaged/main/default/objects/excitingobject__c/excitingobject__c.object-meta.xml
<CustomObject>
    <description>asdasd</description>
    <label>excitingobject</label>
    <nameField>
        <label>excitingobject Name1</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>excitingobjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>