unpackaged/main/default/objects/excitingobject__c/fields/aliformula__c.field-meta.xml
<CustomField>
    <fullName>aliformula__c</fullName>
    <description>asdasd</description>
    <formula>":" &amp; ")"</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>asddasdasdasd</inlineHelpText>
    <label>aliformula</label>
    <type>Text</type>
</CustomField>