unpackaged/main/default/objects/excitingobject__c/fields/autoautoauto__c.field-meta.xml
<CustomField>
    <fullName>autoautoauto__c</fullName>
    <description>autoautoautoautoautoautoautoautoautoautoauto</description>
    <displayFormat>A-{0000}</displayFormat>
    <inlineHelpText>aaaaaaaaaaaaaaaaaaaaaaaaa</inlineHelpText>
    <label>autoautoauto</label>
    <type>AutoNumber</type>
</CustomField>