unpackaged/main/default/objects/excitingobject__c/fields/pickpick__c.field-meta.xml
<CustomField>
    <fullName>pickpick__c</fullName>
    <defaultValue>("thing")</defaultValue>
    <description>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaargh</description>
    <inlineHelpText>hello hello hello hello hello hello hello hello hello hello hello helloa</inlineHelpText>
    <label>pickglobal1</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>hello</valueSetName>
    </valueSet>
</CustomField>