unpackaged/main/default/objects/excitingobject__c/validationRules/somethingvalidatey.validationRule-meta.xml
<ValidationRule>
    <fullName>somethingvalidatey</fullName>
    <active>true</active>
    <errorConditionFormula>2 == 1</errorConditionFormula>
    <errorDisplayField>pickpick__c</errorDisplayField>
    <errorMessage>it broke</errorMessage>
</ValidationRule>